<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/row_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:background="@color/gray">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_edit_height"
                android:layout_margin="@dimen/btn_margin"
                android:autofillHints="0"
                android:background="@color/light_gray"
                android:inputType="number"
                android:paddingTop="@dimen/text_edit_padding_top"
                android:paddingEnd="@dimen/text_edit_padding_right"
                android:text="@string/start_text"
                android:textAlignment="textEnd"
                android:textSize="@dimen/main_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:text="@string/clear" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:text="@string/percent" />

            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:text="@string/to_memory" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/divide" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@color/gray"

                android:text="@string/seven" />

            <Button
                android:id="@+id/button12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/eight" />

            <Button
                android:id="@+id/button13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/nine" />

            <Button
                android:id="@+id/button14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/multiply" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <Button
                android:id="@+id/button21"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="4" />

            <Button
                android:id="@+id/button22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/five" />

            <Button
                android:id="@+id/button23"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/six" />

            <Button
                android:id="@+id/button24"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button31"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/one" />

            <Button
                android:id="@+id/button32"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/two" />

            <Button
                android:id="@+id/button33"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/three" />

            <Button
                android:id="@+id/button44"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button41"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="2.05"
                android:background="@color/gray"
                android:text="@string/zero" />

            <Button
                android:id="@+id/button42"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/point" />

            <Button
                android:id="@+id/button43"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/do_action" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>